--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An out-of-box UI solution for enterprise applications",
   "private": true,
   "scripts": {
-   // "precommit": "npm run lint-staged",
+   "precommit": "npm run lint-staged",
     "start": "roadhog server",
     "start:no-proxy": "NO_PROXY=true roadhog server",
     "build": "roadhog build",
@@ -13,8 +13,8 @@
     "lint:style": "stylelint \"src/**/*.less\" --syntax less",
     "lint": "eslint --ext .js src mock tests && npm run lint:style",
     "lint:fix": "eslint --fix --ext .js src mock tests && npm run lint:style",
-    /*"lint-staged": "lint-staged",
-    "lint-staged:js": "eslint --ext .js",*/
+    "lint-staged": "lint-staged",
+    "lint-staged:js": "eslint --ext .js",
     "test": "jest",
     "test:all": "node ./tests/run-tests.js"
   },
@@ -99,7 +99,7 @@
     }
   },
   "lint-staged": {
-    "**/*.{js,jsx}": "lint-staged:js",
+    "**/*.{js,jsx}": ["eslint --fix", "git add"],
     "**/*.less": "stylelint --syntax less"
   }
 }
